--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,29 @@
 <!-- 	    <version>6.10</version> -->
 <!-- 	    <scope>test</scope> -->
 <!-- 	</dependency> -->
-  
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.slf4j</groupId> -->
+<!-- 	    <artifactId>slf4j-api</artifactId> -->
+<!-- 	    <version>1.8.0-alpha2</version> -->
+<!-- 	</dependency> -->
+
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.24</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.7.24</version>
+	</dependency>
+		
   </dependencies>
 </project>
